syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "TrendingProto";

service TrendingService {
  rpc GetTrendingMovies (TrendingRequest) returns (TrendingResponse) {
  }

  rpc GetTopMovieIds (TrendingRequest) returns (MovieIds) {
  }

  rpc GetMoviesInfo (MovieIds) returns (TrendingResponse) {
  }
}

message Movie {
  string name = 1;
  string description = 2;
  float rating = 3;
}

message MovieIds {
  repeated int32 id = 1;
}

message TrendingRequest {
}

message TrendingResponse {
  repeated Movie movies = 1;
}
